src/test/ui/issues/issue-70433.stderr
error[E0381]: use of possibly-uninitialized variable: `x`
  --> $DIR/issue-70433.rs:9:14
   |
LL |         drop(x);
   |              ^ use of possibly-uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
